When a mask image changes, ensure that elements that use that mask image are repainted correctly.

<https://bugs.webkit.org/show_bug.cgi?id=19954>

Reviewed by Dave Hyatt

* manual-tests/canvas-mask-redraw.html
  Manual testcase
* rendering/RenderBox.cpp:
  (WebCore::RenderBox::imageChanged):
  (WebCore::RenderBox::repaintLayerRectsForImage):
* rendering/RenderBox.h:
  Loop through background layers and mask layers, and
  if this image is used in a layer, compute a repaint
  rect and repaint.
* rendering/RenderImage.cpp:
  (WebCore::RenderImage::imageChanged):
  If this image has a mask, call the base class method.
* rendering/RenderObject.cpp:
  Remove a bogus 'return'.


Canonical link: https://commits.webkit.org/27539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35101 268f45cc-cd09-0410-ab3c-d52691b4dbfc